El proyecto ya quedo terminado, solo falta llenarlo de productos para que quede al 100%

--- a/src/main/resources/templates/usuario/compras.html
+++ b/src/main/resources/templates/usuario/compras.html
@@ -70,7 +70,7 @@
 									<td th:text="${orden.fechaCreacion}"></td>
 									<td th:text="${orden.total}"></td>
 									<td><a th:href="@{/usuario/detalle/{id} (id=${orden.id}) }" class="btn btn-success" style="background-color:#25BD00">Ver Detalle</a></td>
-									<td><a th:href="@{/usuario/archivoPdf/{id}(id=${orden.id})}" class="btn btn-success" style="background-color:#25BD00">Generar PDF</a></td>
+									<td><a th:href="@{/usuario/archivoPdf/{id}(id=${orden.id})}" class="btn btn-success" style="background-color:#25BD00">Ver Factura</a></td>
 
 								</tr>
 							</tbody>
