--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -2,52 +2,44 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Paraíso Shoes</title>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-	<title>Paraíso Shoes</title>
-
-
-	<!-- Bootstrap core CSS -->
-	<link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-
-	<!-- Custom styles for this template -->
-	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
-
+    <!-- Bootstrap core CSS -->
+    <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Cargar SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 
 <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background-color: #FFC0CB !important">
+        <div class="container">
+            <a class="navbar-brand" th:href="@{/}" style="color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black">Paraíso Shoes</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/usuario/login}" style="color:#FFFFFF">Ingresar</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background-color: #FFC0CB !important">
-		<div class="container">
-			<a class="navbar-brand" th:href="@{/}" style="color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black">Paraíso Shoes</a>
-
-
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/usuario/login}" style="color:#FFFFFF">Ingresar</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-
-	<!-- Page Content -->
-	<div class="container" style="max-width: 600px; margin-top: 50px;">
+    <!-- Page Content -->
+    <div class="container" style="max-width: 600px; margin-top: 50px;">
         <div class="card mb-3" style="text-align: center; background-color: #fff; border: 1px solid #dee2e6; border-radius: 10px;">
             <div class="row no-gutters">
-                <div class="col-md-4" style="background-color: #ffc0cb; border-radius: 10px 0 0 10px;">
-                </div>
+                <div class="col-md-4" style="background-color: #ffc0cb; border-radius: 10px 0 0 10px;"></div>
                 <div class="col-md-8">
                     <div class="card-body">
                         <h2 style="color: #ff69b4;">Ingresar</h2>
@@ -56,20 +48,18 @@
             </div>
         </div>
 
-        <form th:action="@{/usuario/acceder}" method="post">
+        <form id="loginForm">
             <div class="form-group">
-                <label for="email" style="color: #ff69b4;">Correo Electronico:</label>
+                <label for="email" style="color: #ff69b4;">Correo Electrónico:</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email" required autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
             </div>
-
             <div class="form-group">
                 <label for="password" style="color: #ff69b4;">Contraseña:</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Ingrese su contraseña" required style="border: 1px solid #ff69b4; border-radius: 5px;">
             </div>
-
             <div class="form-group">
                 <div class="text-center">
-                    <button type="submit" class="btn btn-dark" style="background-color: #ff69b4; border-color: #ff69b4;">
+                    <button type="button" class="btn btn-dark" id="btnLogin" style="background-color: #ff69b4; border-color: #ff69b4;">
                         <span class="glyphicon glyphicon-ok" style="color: #fff;"></span> Ingresar
                     </button>
                 </div>
@@ -79,15 +69,51 @@
             <a th:href="@{/usuario/registro}" class="card-link" style="color: #ff69b4">Si aún no tiene cuenta aquí puede registrarse</a>
         </div>
     </div>
-	<!-- /.container -->
+    <!-- /.container -->
 
-	<!-- Footer -->
-	<div th:include="usuario/template_usuario.html::footer"></div>
+    <!-- Footer -->
+    <div th:include="usuario/template_usuario.html::footer"></div>
 
-	<!-- Bootstrap core JavaScript -->
-	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+    <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
+    <script>
+        document.getElementById('btnLogin').addEventListener('click', function() {
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+
+            fetch('/usuario/acceder', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ email: email, password: password })
+            }).then(response => response.json()).then(data => {
+                if (data.status === 'success') {
+                    swal({
+                        title: "Acceso exitoso",
+                        icon: "success",
+                        button: "OK",
+                    }).then(() => {
+                        window.location.href = data.redirect;
+                    });
+                } else {
+                    swal({
+                        title: data.message,
+                        icon: "error",
+                        button: "OK",
+                    });
+                }
+            }).catch(error => {
+                swal({
+                    title: "Error al intentar iniciar sesión",
+                    icon: "error",
+                    button: "OK",
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
